<resources>
    <string name="app_name">Bookkeeping</string>
    <string name="add_account_button">add new account</string>
    <string name="accounts_list">Accounts list</string>
    <string name="transactions_list">Transactions list</string>
    <string name="account_name">Enter account name:</string>
    <string name="account_value">Enter amount of money:</string>
    <string name="transaction_name">Enter transaction name:</string>
    <string name="transaction_value">Enter amount of money:</string>
    <string name="here">here</string>
    <string name="currency">Currency</string>
    <string name="done">done</string>
    <string name="currency_rub">RUB</string>
    <string name="currency_usd">USD</string>
    <string name="currency_eur">EUR</string>
    <string name="add_transaction_button">add transaction</string>
    <string name="edit_date">Write the date of transaction</string>
    <string name="hint_date">dd-mm-yyyy</string>
    <string name="edit_comment">Write an additional comment</string>
    <string name="type">type</string>
    <string name="create_transaction">Create transaction</string>
    <string name="create_account">Create account</string>
    <string name="transaction_list">List of transactions</string>
    <string name="button_account_delete">delete</string>
    <string name="button_cloud">cloud</string>
    <string name="cloud">Creating cloud</string>
    <string name="cloud_message">You can save or load your data to cloud here</string>
    <string name="button_cloud_save">save to cloud</string>
    <string name="button_cloud_load">load from cloud</string>
    <string name="firebase_authorization">Authorization</string>
    <string name="firebase_registration">Registration</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="book_name">Name</string>
    <string name="book_value">Account amount</string>
    <string name="book_currency">Current currency</string>
    <string name="book_value_rub">Amount in rubles</string>
    <string name="write_name">Write the name at least</string>
    <string name="write_value">Write value of transaction</string>
    <string name="transactions">Transactions</string>
    <string name="cloud_storage">Cloud storage</string>
    <string name="cancel">Cancel</string>
    <string name="description">Choose any currency that will be drawn on the chart</string>
    <string name="auth_fail">Authorization fail</string>
    <string name="reg_success">Registration successful</string>
    <string name="reg_fail">Registration fail</string>
    <string name="password_longer">Password must be at least 6 characters long</string>
    <string name="saved_success">Saved successfully</string>
    <string name="no_data_cloud">no data in the cloud</string>
    <string name="loading_failed">Loading failed</string>
    <string name="loading_database_success">Loading from database success</string>
    <string name="click_on_transaction_to_delete">click on transaction to delete</string>
    <string name="click_account_to_delete">click on account to delete</string>
    <string name="some_error">Some error occurred!</string>
    <string name="select_date">Select date</string>
    <string name="wrong_date_format">Wrong date format!</string>
    <string name="later_date_error">Choose a date earlier than today</string>
    <string name="early_date_error">You can not choose such earlier date</string>
    <string name="date_format_error">date format error</string>
    <string name="currencies_rates_search_error">Currencies rates for this date are not available</string>
    <string name="date_input_format">DD.MM.YYYY</string>


</resources>
