<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/transaction_name"/>

    <EditText
        android:id="@+id/edit_name_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:hint="@string/here"
        android:textColor="@color/black"
        android:text="@string/transaction_value"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_value_transaction"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:maxLength="12"
            android:digits="1234567890."
            android:inputType="number"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/transaction_currency_btn"
            android:layout_width="54dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/empty_button"
            android:text="USD"
            >

        </Button>

        <Spinner
            android:id="@+id/transaction_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:prompt="@string/type"
            >
        </Spinner>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:text="@string/select_date"/>

    <EditText
        android:id="@+id/edit_transaction_date"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:layout_marginTop="8dp"
        android:hint="@string/date_input_format"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:text="@string/edit_comment"/>

    <EditText
        android:id="@+id/edit_transaction_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/button_done_create_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/empty_button"
        android:visibility="visible"
        android:text="@string/done"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        />


</LinearLayout>