<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cloud.FirebaseStartActivity">


    <EditText android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:layout_marginTop="145dp"
        android:hint="@string/hint_email"
        android:textSize="25sp"/>

    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_email"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:textSize="25sp"
        android:id="@+id/et_password"
        />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="20dp"
        >
        <Button android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/firebase_authorization"
            android:layout_weight="1"
            android:id="@+id/btn_sign_in"/>
        <Button android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/firebase_registration"
            android:id="@+id/btn_registration"/>

    </LinearLayout>
</RelativeLayout>
