<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:text="@string/description"
        />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_below="@id/description"
        android:background="@color/black"
        android:layout_marginTop="4dp"
        android:layout_height="1dp" />

    <GridView
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_line"
        android:layout_above="@id/btn_cancel"
        android:layout_marginBottom="8dp"
        android:numColumns="5"
        >
    </GridView>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:layout_marginBottom="4dp"
        android:text="@string/done"
        />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:layout_marginBottom="4dp"
        android:text="@string/cancel"
        />

</RelativeLayout>