<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/violet">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:text="@string/app_name"
                android:layout_centerVertical="true"
                android:textSize="24sp"
                />


            <ImageView
                android:id="@+id/chart_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_insert_chart"
                android:textColor="@color/white"
                />
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <ListView
        android:id="@+id/accounts_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:layout_above="@id/button_layer"
        android:layout_weight="5">

    </ListView>

    <LinearLayout
        android:id="@+id/button_layer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="4dp"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/empty_button"
            android:text="@string/button_account_delete"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/add_account_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/empty_button"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:text="@string/add_account_button"

            />
        <Button
            android:id="@+id/button_cloud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/empty_button"
            android:text="@string/button_cloud"
            android:layout_weight="1"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>